--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -75,3 +75,37 @@ jobs:
       #  Run deploy.py
       - name: Run deployment script
         run: python scripts/deploy.py --overwrite
+
+      - name: Install GitHub CLI
+        run: |
+                sudo apt update
+                sudo apt install -y gh
+      
+      # Login used PAT
+      - name: Authenticate GitHub CLI
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        run: |
+             echo $GH_TOKEN | gh auth login --with-token
+
+      # Create new repo
+      - name: Create new repo
+        id: create_repo
+        run: |
+           gh repo create my-new-repo --public --confirm
+           echo "REPO_URL=$(gh repo view my-new-repo --json sshUrl -q .sshUrl)" >> $GITHUB_ENV
+
+      # Connect the local project to the new repo and make a push
+      - name: Initialize new git and push
+        run: |
+           git remote remove origin || true
+           git remote add origin $REPO_URL
+           git branch -M main
+           git add .
+           git commit -m "Initial commit"
+           git push -u origin main
+
+
+      
+
+
