--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -84,8 +84,8 @@ jobs:
       # Login used PAT
       - name: Authenticate GitHub CLI
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        run: echo "${{ secrets.GH_TOKEN }}" | gh auth login --with-token
+          GH_TOKEN: ${{ secrets.GH_PAT }}
+        run: echo "${{ secrets.GH_PAT }}" | gh auth login --with-token
 
       # Create new repo
       - name: Create new repo
