--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -89,7 +89,7 @@ jobs:
       - name: Create new repo
         id: create_repo
         run: |
-           gh repo create my-new-repo --public --confirm
+           gh repo create my-new-repo2 --public --confirm
            echo "REPO_URL=$(gh repo view my-new-repo2 --json sshUrl -q .sshUrl)" >> $GITHUB_ENV
 
       # Connect the local project to the new repo and make a push
