--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -89,8 +89,11 @@ jobs:
       - name: Create new repo
         id: create_repo
         run: |
-           gh repo create my-new-repo2 --public --confirm
-           echo "REPO_URL=$(gh repo view my-new-repo2 --json sshUrl -q .sshUrl)" >> $GITHUB_ENV
+           REPO_NAME="project-$(date +%s)" 
+           echo "REPO_NAME=$REPO_NAME" >> $GITHUB_ENV
+           gh repo create Beshoy7878/$REPO_NAME --public --confirm
+           REPO_URL="https://x-access-token:${{ secrets.GH_PAT }}@github.com/Beshoy7878/$REPO_NAME.git"
+           echo "REPO_URL=$REPO_URL" >> $GITHUB_ENV
 
       # Connect the local project to the new repo and make a push
       - name: Initialize new git and push
