--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -97,10 +97,11 @@ jobs:
       ##### Connect the local project to the new repo and make a push
       - name: Initialize new git and push
         run: |
+           git init
            git remote remove origin || true
            git remote add origin $REPO_URL
-           git config --global user.name "Beshoy7878"
-           git config --global user.email "beshoseha@gmail.com"
+           git config  user.name "Beshoy7878"
+           git config  user.email "beshoseha@gmail.com"
            git branch -M main
            git add .
            git commit -m "Initial commit"
