--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -92,10 +92,10 @@ jobs:
            echo "REPO_NAME=$REPO_NAME" >> $GITHUB_ENV
            gh auth login --with-token <<< "$GH_TOKEN"
            gh repo create Beshoy7878/$REPO_NAME --public --confirm
-           REPO_URL="https://x-access-token:$GH_TOKEN@github.com/Beshoy7878/$REPO_NAME.git"
+           REPO_URL="https://x-access-token:${{ secrets.GH_PAT }}@github.com/Beshoy7878/$REPO_NAME.git"
            echo "REPO_URL=$REPO_URL" >> $GITHUB_ENV
 
-
+           
            
 
       ##### Connect the local project to the new repo and make a push
