--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -77,16 +77,11 @@ jobs:
         run: python scripts/deploy.py --overwrite
 
 
-      - name: Setup Git
-        run: |
-          git config user.name "Beshoy7878"
-          git config user.email "beshoseha@gmail.com"
-
-      - name: Add, commit and push
-        env:
-          GH_PAT: ${{ secrets.GH_PAT }}
-        run: |
-          
-          git add .
-          git commit -m "Update project files" || echo "No changes to commit"
-          git push "https://x-access-token:$GH_PAT@github.com/Beshoy7878/tf-gcp-automation-b.git" main
+        #  Commit and push generated Terraform project
+      - name: Commit and push changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "Auto-generate Terraform project from config"
+          commit_user_name: GitHub Actions Bot
+          commit_user_email: actions@github.com
+          commit_author: GitHub Actions <actions@github.com>
