--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -20,7 +20,7 @@ jobs:
       id-token: write
 
     env:
-      GOOGLE_CREDENTIALS: ${{ secrets.GOOGLE_CREDENTIALS}}
+      GOOGLE_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS}}
       TF_IN_AUTOMATION: true
       TF_INPUT: false
 
@@ -53,7 +53,7 @@ jobs:
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v1
         with:
-           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
+           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
       - name: Install gcloud CLI
         uses: google-github-actions/setup-gcloud@v2
@@ -75,20 +75,21 @@ jobs:
       #  Run deploy.py
       - name: Run deployment script
         run: python scripts/deploy.py --overwrite
-
-       # Configure Git user for the commit
+      
       - name: Configure Git
+        env:
+          GH_PAT: ${{ secrets.GH_TOKEN }}
         run: |
           git config --global user.name "Beshoy7878"
           git config --global user.email "beshooseha@gmail.com"
+          git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
 
-      # Create a new branch and commit the output
-      - name: Create and commit changes to the new branch
+      # Create new branch, commit, and push generated_projects
+      - name: Commit and push generated projects
+        env : 
+          BRANCH_NAME: my-new-branch
         run: |
-          
           git checkout -b ${{ github.event.inputs.branch_name }}
-          git add .
-          git commit -m "Auto GCP Project Plan results for workflow run ${{ github.run_number }}" || echo "No changes to commit"
-      # Push the new branch to the repository
-      - name: Push new branch
-        run: git push origin ${{ github.event.inputs.branch_name }} --force
+          git add generated_projects
+          git commit -m "Add generated projects from workflow run ${{ github.run_number }}" || echo "No changes to commit"
+          git push origin ${{ github.event.inputs.branch_name }} --force
