--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -89,7 +89,7 @@ jobs:
         env : 
           BRANCH_NAME: my-new-branch
         run: |
-          git checkout -b ${{ github.event.inputs.branch_name }}
+          git checkout  -B $BRANCH_NAME
           git add generated_projects
           git commit -m "Add generated projects from workflow run ${{ github.run_number }}" || echo "No changes to commit"
           git push origin ${{ github.event.inputs.branch_name }} --force
